FileSystemBrowserWindow.java: Locate 'doc' folder more reliably.
Locating the 'doc' folder was quite unreliable and dependent on the
working directory setting.
We now resolve the 'lib' folder first, through querying the location of
the code source, and then locate the 'doc' folder starting from there.